singolo1.css
/*global*/
:root {
  --color-active: #f06c64;
}

html {
  font-family: 'Lato', sans-serif;
  font-size: 10px;
}

h1,
h2,
h3 {
  padding: 0;
  margin: 0;
}

a {
  text-decoration: none;
}

.left_padding_fix_1px {
  padding-left: 1px;
}

.left_padding_fix_2px {
  padding-left: 2px;
}

/*Typo*/
.typo_size_xxl {
  font-size: 3.0rem;
  line-height: 1;
}

.typo_size_xl {
  font-size: 2.5rem;
  line-height: 1;
}

.typo_size_md {
  font-size: 1.8rem;
  line-height: 1;
}

.typo_size_sm {
  font-size: 1.2rem;
  line-height: 1;
}

.typo_color_active {
  color: var(--color-active);
}

.typo_color_light {
  color: #ffffff;
}

.typo_color_main {
  color: #767e9e;
}

.typo_color_headers {
  color: #666d89;
}

.typo_weight_300 {
  font-weight: 300;
}

.typo_weight_500 {
  font-weight: 500;
}

.typo_weight_600 {
  font-weight: 600;
}

.typo_weight_900 {
  font-weight: 900;
}

/*main part*/
.content {
  box-sizing: border-box;
  max-width: 1020px;
  margin: 0 auto;
  padding: 0;
}

.header {
  border-bottom: 6px solid #323746;
  background-color: #2d303a;
}

.header__content {
  padding: 31px 40px 33px 40px;
  display: flex;

  justify-content: space-between;
  align-items: center;
}

.slider {
  border-bottom: 6px solid #ea676b;
  background-color: var(--color-active);
}

.slider__content {
  padding: 53px 40px 58px 42px;
  display: flex;

  justify-content: space-between;
  align-items: center;
}

.services {
  border-bottom: 6px solid #ffffff;
  background-color: #f2f2f2;
}

.services__content {
  padding: 62px 40px 30px 40px;
}

.navigation {
  margin: 0;
  padding-top: 12px;
  display: flex;

  list-style-type: none;
}

.navigation__item {
  margin-left: 31px;
  position: relative;
  letter-spacing: -0.33px;

  text-transform: uppercase;
}

.navigation__item:not(:last-child)::after {
  display: block;
  position: absolute;
  right: -17px;
  top: -1px;

  content: '\00b7';
  color: #494e62;
}

.navigation__link:hover {
  color: var(--color-active);

  transition: 0.3s ease-out;
}

.logo {
  font-size: 2.5rem;
  font-weight: 700;
  letter-spacing: -0.5px;
  line-height: 1;
  color: #ffffff;
}

.logo:after {
  content: '*';
  color: var(--color-active);
}

.slider__navigation-image-left {
  margin-top: 1px;
  background: url('assets/slider_left.png') no-repeat top left;
  display: inline-block;
  height: 27px;
  width: 16px;
}

.slider__navigation-image-right {
  margin-top: 1px;
  background: url('assets/slider_right.png') no-repeat top left;
  display: inline-block;
  height: 27px;
  width: 16px;
}

.slider__navigation-image-left:hover,
.slider__navigation-image-right:hover {
  filter: brightness(80%);
  transition: 0.3s ease-out;
}

.slider__vertical-frame {
  padding-left: 19px;
  position: relative;
  background: url('assets/iphone_vert.png') no-repeat top left;
  display: inline-block;
  height: 483px;
  width: 240px;
}

.slider__horizontal-frame {
  padding-right: 2px;
  padding-bottom: 1px;
  position: relative;
  background: url('assets/iphone_hor.png') no-repeat top left;
  display: inline-block;
  height: 240px;
  width: 483px;
}

.slider__vertical-frame-image {
  position: absolute;
  left: 14px;
  top: 65px;
}

.slider__horizontal-frame-image {
  position: absolute;
  left: 60px;
  top: 14px;
}

.services__header {
  letter-spacing: -0.14px;
}

.services__text {
  margin-top: 21px;
  margin-bottom: 21px;

  line-height: 3.0rem;
  text-align: justify;
}

.cards {
  padding-top: 24px;
  display: flex;

  flex-wrap: wrap;
  justify-content: space-between;
}

.cards__card {
  padding-bottom: 19px;
  display: flex;
  width: 32%;
  height: 10.4rem;
  overflow: hidden;

  line-height: 2.1rem;
  letter-spacing: -0.1px;
}

.cards__card-image {
  padding-top: 1px;
  padding-right: 18px;
}

.cards__card-text {
  margin: 10px 0 13px 1px;

  text-align: justify;
  line-height: 2.1rem;
}

